Corrección GetData() para proveedores

--- a/authorizations.html
+++ b/authorizations.html
@@ -188,50 +188,72 @@
             font-size: 11px;
         }
 
-        /* Colgroup (ajusta si lo deseas) */
+        /* Colgroup - AJUSTE DE ANCHOS */
         .data-col-1 {
-            width: 12%
+            width: 11%
         }
+
+        /* Proveedor */
 
         .data-col-2 {
-            width: 22%
+            width: 20%
         }
+
+        /* Descripción */
 
         .data-col-3 {
-            width: 8%
+            width: 7%
         }
 
+        /* Fecha Pedido */
+
         .data-col-4 {
-            width: 10%
+            width: 9%
         }
+
+        /* Comprador */
 
         .data-col-5 {
             width: 8%
         }
 
+        /* Medio pedido */
+
         .data-col-6 {
             width: 8%
         }
 
+        /* Edificio */
+
         .data-col-7 {
-            width: 10%
-        }
-
-        .data-col-8 {
-            width: 7%
-        }
-
-        .data-col-9 {
-            width: 3%
-        }
-
-        .data-col-10 {
-            width: 3%
-        }
-
-        .data-col-11 {
             width: 9%
         }
+
+        /* Solicitante */
+
+        .data-col-8 {
+            width: 6%
+        }
+
+        /* GDC */
+
+        .data-col-9 {
+            width: 5%
+        }
+
+        /* AUTORIZADO SI */
+
+        .data-col-10 {
+            width: 5%
+        }
+
+        /* AUTORIZADO NO */
+
+        .data-col-11 {
+            width: 6%
+        }
+
+        /* Importe s/iva - MÁS ANCHO */
 
         /* Celdas base */
         .header-table th,
@@ -256,7 +278,7 @@
             background-color: var(--thead-bg);
             color: #000;
             font-weight: 700;
-            text-align: left;
+            text-align: center;
             -webkit-print-color-adjust: exact;
             print-color-adjust: exact;
         }
